--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Hello World! it is my second try</h1>
+        <h2>Hello mfer, lol it works, now lets see if i can leave it on vscode</h2>
     </body>
 </html>
