another update.mg

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Hello World! it is my second try</h1>
         <h2>Hello mfer, lol it works, now lets see if i can leave it on vscode</h2>
+        <p>well that happened</p>
     </body>
 </html>
