final part for the day

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -17,5 +17,28 @@
         <!-- nice, ctrl / helps creat comment tab quick -->
         <!-- <strong> is used to make words bold and important,, <em> makes words italics and adds emphasis to it -->
         <p><strong>Lorem ipsum dolor sit amet consectetur <em>adipisicing</em> elit.</strong> Dolorum praesentium neque cumque hic delectus <em>quidem assumenda accusamus id vitae!</em> Enim quis rerum odit repellendus tenetur mollitia optio cumque perspiciatis culpa?</p>
+        <!-- <ul> unorderd list of items (bullet) in which the items would be listed with <li> which means LIST ITEMS -->
+        <!-- <ol> is an ORDERED LIST wich is usually numbered -->
+        <ul>
+            <li>Garri</li>
+            <li>apple
+                <ol>
+                    <li>Red</li>
+                    <li>Green</li>
+                </ol>
+            </li>
+            <li>mango</li>
+        </ul>
+        <!-- <ul> can be a sub element for <ol> n vice versa -->
+        <ol>
+            <li>cat</li>
+            <li>dog
+                <ul>
+                    <li>brown</li>
+                    <li>yellow</li>
+                </ul>
+            </li>
+            <li>horse</li>
+        </ol>
     </body>
 </html>
