--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -9,6 +9,7 @@
     <!-- "noopener" value prevents the opened link from gaining access to the webpage from which it was opened. -->
     <!-- "noreferrer" value prevents the opened link from knowing which webpage or resource has a link (or ‘reference’) to it. -->
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">Click me</a>
+    <a href="pages/about.html">Click</a>
 
 </body>
 </html>
