--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -8,8 +8,11 @@
     <h1>Homepage</h1>
     <!-- "noopener" value prevents the opened link from gaining access to the webpage from which it was opened. -->
     <!-- "noreferrer" value prevents the opened link from knowing which webpage or resource has a link (or ‘reference’) to it. -->
+        
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">Click me</a>
-    <a href="pages/about.html">Click</a>
-
+    <!-- a href is a link that leads to other sites or pages of your website -->
+    <!-- "./pages/about.html" gives the directory of the about.html location in the folder where the web dev files are kept -->
+    <a href="./pages/about.html">About</a>
+    <img src="./images/dog.jpg" alt="Dog">
 </body>
 </html>
