Done for the day

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -13,6 +13,10 @@
     <!-- a href is a link that leads to other sites or pages of your website -->
     <!-- "./pages/about.html" gives the directory of the about.html location in the folder where the web dev files are kept -->
     <a href="./pages/about.html">About</a>
+    <!-- links can reference other pages or our website pages, e.g href="odin.com/chicken" refers to another site while href="../images/about.html" refers to our website links -->
     <img src="./images/dog.jpg" alt="Dog">
+
+    <p>This page covers for tutorials on images type to use and their funtions</p>
+    
 </body>
 </html>
