--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -18,5 +18,22 @@
 
     <p>This page covers for tutorials on images type to use and their funtions</p>
     
+    <h2>JPGs</h2>
+
+    <p>JPG images are good for photos.</p>
+    <img src="./images/mochi.jpg" alt="JPG image">
+
+    <h2>GIFs</h2>
+    <p>GIFs are good for animations.</p>
+    <img src="./images/mochi.gif" alt="GIFs image">
+
+    <h2>PNGs</h2>
+    <p>PNGs are good for diagrams and icons.</p>
+    <img src="./images/mochi.png" alt="PNG image">
+
+    <h2>SVgs</h2>
+    <p>SVGs are <em>amazing</em>. Use them whenever you can.</p>
+    <img src="./images/mochi.svg" alt="SVG image">
+    
 </body>
 </html>
