--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>Hello World!</h1>
+        <h4>This is a heading 4</h4>
+        <p> <strong>Lorem ipsum dolor </strong> sit <em>amet consectetur adipisicing elit</em> . Harum perferendis consequatur molestias error reiciendis tempora mollitia atque, aliquam esse eum dolor, repellendus vitae? Dicta excepturi sed facere sapiente reprehenderit deleniti.</p>
     </body>
 </html>
